--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jwt-decode": "^4.0.0",
+    "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-loader-spinner": "^6.1.6"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "typescript": "^5"
   }
 }
