--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "next": "14.1.4",
     "react": "^18",
